syntax = "proto3";
import "commontype/QoS.proto";
import "commontype/TopicMessage.proto";

option java_multiple_files = true;
option java_package = "com.zachary.bifromq.dist.rpc.proto";
option java_outer_classname = "DistServiceProtos";

package distservice;

service DistService {
  rpc sub (SubRequest) returns (SubReply);
  rpc unsub (UnsubRequest) returns (UnsubReply);
  rpc clear(ClearRequest) returns (ClearReply);
  rpc dist (stream DistRequest) returns (stream DistReply);
}

message SubRequest {
  uint64 reqId = 1;
  string tenantId = 2;
  string inboxId = 3; // the inbox id defined in calling sub broker service identified by CN field of client cert
  string topicFilter = 4;
  commontype.QoS subQoS = 5;
  uint32 broker = 6;
  string delivererKey = 7;
}

message SubReply {
  enum SubResult {
    OK_QoS0 = 0x00; // max qos0 granted
    OK_QoS1 = 0x01; // max qos1 granted
    OK_QoS2 = 0x02; // max qos2 granted
    Failure = 0x80;
  }
  uint64 reqId = 1;
  SubResult result = 2;
}

message UnsubRequest {
  uint64 reqId = 1;
  string tenantId = 2;
  string inboxId = 3; // the inbox id defined in calling sub broker service identified by CN field of client cert
  string topicFilter = 4;
  uint32 broker = 5;
  string delivererKey = 6;
}

message UnsubReply {
  uint64 reqId = 1;
  bool exist = 2;
}

message ClearRequest {
  uint64 reqId = 1;
  string tenantId = 2;
  string inboxId = 3;
  uint32 broker = 4;
  string delivererKey = 5;
}

message ClearReply {
  uint64 reqId = 1;
}

message DistRequest {
  uint64 reqId = 1;
  repeated commontype.PublisherMessagePack messages = 2;
}

message DistReply {
  uint64 reqId = 1;
}